--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -3,6 +3,14 @@ on:
   push:
     branches: 
       - master
+jobs:      
+  my_testing:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Run a one line!!!
+        run: echo "Hello WORLD"
+
       
     
    
