--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -2,7 +2,7 @@ name: MyGithubActions
 on: 
   push:
     branches: 
-      - master
+      - main
 jobs:      
   my_testing:
     runs-on: ubuntu-latest
