--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -4,8 +4,8 @@ on:
     branches: 
       - main
 env:
-  MY_NAME:  VALERA
-  MY_STATUS: "MY_STATUS"
+  MY_NAME:  ${{ vars.MY_NAME }}
+  MY_STATUS:  ${{ vars.MY_STATUS }}
 
 
 jobs:
@@ -16,6 +16,6 @@ jobs:
       - name: Run echo and execute python script
         run: |
           echo "Hello WORLD ${MY_NAME}"
-          python ooo.py  ooo ${{ env.MY_NAME}}
+          python ooo.py  ooo $MY_NAME $MY_STATUS
 
   
