--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -2,7 +2,7 @@ name: MyGithubActions
 on: 
   push:
     branches: 
-      - main
+      - production
 env:
   MY_NAME:  ${{ vars.MY_NAME }}
   MY_STATUS:  ${{ vars.MY_STATUS }}
