--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -19,6 +19,7 @@ jobs:
           python ooo.py  ooo $MY_NAME $MY_STATUS
   my_testing2:
     runs-on: ubuntu-latest
+    needs: [my_testing]
     steps:
       - uses: actions/checkout@v1
       - name: Run echo and execute python script
